dotproject CHANGELOG (insert latest entries at the top)

17 October 2002 (AJE):
-----------------------------
functions/admin_func.php
- new file for definable user types

modules/admin/addedituser.php
modules/admin/viewuser.php
modules/admin/dosql.php
- add support to edit user type

20 September 2002 (AJE):
-----------------------------
module/ticketsmith/index.php
module/ticketsmith/post_ticket.php
dosql/ticket_aed.php
- added functionality to add basic ticket from the browser

includes/config.php
- added secret word include

includes/permissions.php
- fixed login pybass security breach
- added secret word to cookie

includes/secret.php
- new file for security

./logincheck.php
- added secret word hash to cookie

11 September 2002 (AJE):
-----------------------------
module/dosql/addfile.php
- declared $wordarr explicitly as this would error in the while array

module/files/index.php
- change user id to the full user name

modules/tasks/view.php
- change link to addfile to reference file_task rather than file_id

5 September 2002 (AJE):
-----------------------------
modules/calendar/day_view.php
- added breadcrumb to week view
- tidied code

modules/calendar/week_view.php
- fixed bug in table
- linked actual day hyperlink to day view
- tidied code

4 September 2002 (AJE):
-----------------------------
includes/leftnav.php
- removed legacy code (form wrapping the main table)

3 September 2002 (AJE):
-----------------------------
modules/tasks/view.php
- fixed a broken link to the project in the breadcrumbs

2 September 2002 (AJE):
-----------------------------
Fixed up the order of this log (my mistake, call it a sourthern hemi-sphere thing)

modules/admin/index.php
modules/admin/permissions.php
modules/admin/addedituser.php
modules/admin/viewuser.php
- upgraded permissions

./calendar.php
modules/projects/addedit.php
- fixed a bug in the month and day select boxes

30 August 2002 (AJE):
-----------------------------
dosql/addeditTask.php